# search-governor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example  content_cleaner.json  deep_analyzer.json  fetcher.json  provider_presets.json  reranker.json  retention.json  scoring.json
docs/: AGENT_INTEGRATION_CONTRACT.md  PROVIDER_ADAPTER_CONTRACT.md
examples/managed_sources/: _adapter_common.py  sources.json
examples/managed_sources/mock/: adapter.py
integrations/openclaw/: README.md  browser_fetch.py  browser_gateway_rpc.mjs  index.js  openclaw.plugin.json  package.json
integrations/openclaw/skill-template/: SKILL.md
providers/: registry.json
providers/example/: source.json
scripts/: build_openclaw_skill.py  check-public-tree.sh  check.sh  clean.sh  deploy_local_release.py  deploy_openclaw_skill.py  doctor.sh  export_bundle.sh  fetch_background.py  install.sh  migrate_flat_runtime.py  publish_local_release.py  smoke_test.sh  validate_source.py  validate_source.sh  verify_modes.sh
search_governor/: brief.py  cli.py  collector.py  config.py  content_cleaner.py  dedupe.py  deep_analyzer.py  fetch_cache.py  fetcher.py  gc.py  models.py  normalizer.py  paths.py  pipeline.py  reporter.py  reranker.py  rules.py  sources.py  url_safety.py
tests/: openclaw_plugin_test.js  test_collector.py  test_contract.py  test_local_deployment.py  test_local_publish.py  test_paths.py  test_pipeline.py  test_registry.py  test_skill_builder.py  test_url_safety.py
