[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "search-governor"
version = "0.1.3"
description = "Provider-neutral aggregated search governance engine with manual adapter registration."
requires-python = ">=3.12"
dependencies = []
license = {text = "Apache-2.0"}
readme = "README.md"
authors = [{name = "wet86y"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/wet86y/search-governor"
Repository = "https://github.com/wet86y/search-governor"
Issues = "https://github.com/wet86y/search-governor/issues"

[project.scripts]
sg = "search_governor.cli:main"

[tool.setuptools]
packages = ["search_governor"]
